--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#080c14" />
 		<meta property="og:title" content="Genshin Primo Tracker"/>
-		<meta property="og:description" content="A Website that helps you track your primogems."/>
-		<meta name="description" content="A Website that helps you track your primogems."/>
+		<meta property="og:description" content="A website that helps you track your primogems."/>
+		<meta name="description" content="A weSbsite that helps you track your primogems."/>
 		<meta property="og:image" content="./logo512.png"/>
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-15YRKLR4CF"></script>
@@ -23,11 +23,11 @@
 		
 		<link href="./_app/immutable/assets/app.BZCgadz-.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.C6PPviNE.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DbU-YDkW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.vNOxj1hX.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CV2G0I9C.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C0GX5Ka7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C7AK3-_k.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DzhclyiS.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CT9OZ6T_.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Bh_DLNjq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DL8G8q5x.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BoU-Hr9T.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.Da6Wc_7r.js"><title>Genshin Primo Planner</title><!-- HEAD_svelte-w6nzn6_START --><!-- HEAD_svelte-w6nzn6_END --><!-- HEAD_svelte-cpyj77_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode(defaultMode, themeColors2) {
@@ -50,7 +50,7 @@
 			
 			<script>
 				{
-					__sveltekit_u2d0pj = {
+					__sveltekit_1hmb9q3 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -59,8 +59,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DbU-YDkW.js"),
-						import("./_app/immutable/entry/app.CT9OZ6T_.js")
+						import("./_app/immutable/entry/start.CV2G0I9C.js"),
+						import("./_app/immutable/entry/app.Bh_DLNjq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
