--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 		
 		<link href="./_app/immutable/assets/app.BZCgadz-.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.C6PPviNE.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CV2G0I9C.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C0GX5Ka7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.PERpJsKQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BVbUu-CH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C7AK3-_k.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DzhclyiS.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Bh_DLNjq.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Bo6Z56zd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DL8G8q5x.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BoU-Hr9T.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Da6Wc_7r.js"><title>Genshin Primo Planner</title><!-- HEAD_svelte-w6nzn6_START --><!-- HEAD_svelte-w6nzn6_END --><!-- HEAD_svelte-cpyj77_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode(defaultMode, themeColors2) {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.DTA4cmWv.js"><title>Genshin Primo Planner</title><!-- HEAD_svelte-w6nzn6_START --><!-- HEAD_svelte-w6nzn6_END --><!-- HEAD_svelte-cpyj77_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode(defaultMode, themeColors2) {
   const rootEl = document.documentElement;
   const mode = localStorage.getItem("mode-watcher-mode") || defaultMode;
   const light = mode === "light" || mode === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
@@ -50,7 +50,7 @@
 			
 			<script>
 				{
-					__sveltekit_1hmb9q3 = {
+					__sveltekit_1chvim6 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -59,8 +59,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CV2G0I9C.js"),
-						import("./_app/immutable/entry/app.Bh_DLNjq.js")
+						import("./_app/immutable/entry/start.PERpJsKQ.js"),
+						import("./_app/immutable/entry/app.Bo6Z56zd.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
