--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="theme-color" content="#080c14" />
 		<meta property="og:title" content="Genshin Primo Tracker"/>
 		<meta property="og:description" content="A website that helps you track your primogems."/>
-		<meta name="description" content="A weSbsite that helps you track your primogems."/>
+		<meta name="description" content="A website that helps you track your primogems."/>
 		<meta property="og:image" content="./logo512.png"/>
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-15YRKLR4CF"></script>
@@ -23,11 +23,11 @@
 		
 		<link href="./_app/immutable/assets/app.BZCgadz-.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.C6PPviNE.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.PERpJsKQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BVbUu-CH.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start._eIE_3Rt.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Cm8fEBPV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C7AK3-_k.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DzhclyiS.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Bo6Z56zd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.frcpasrB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DL8G8q5x.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BoU-Hr9T.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.DTA4cmWv.js"><title>Genshin Primo Planner</title><!-- HEAD_svelte-w6nzn6_START --><!-- HEAD_svelte-w6nzn6_END --><!-- HEAD_svelte-cpyj77_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode(defaultMode, themeColors2) {
@@ -50,7 +50,7 @@
 			
 			<script>
 				{
-					__sveltekit_1chvim6 = {
+					__sveltekit_1pygk8r = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -59,8 +59,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.PERpJsKQ.js"),
-						import("./_app/immutable/entry/app.Bo6Z56zd.js")
+						import("./_app/immutable/entry/start._eIE_3Rt.js"),
+						import("./_app/immutable/entry/app.frcpasrB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
