--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png">
+    	<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-32x32.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#080c14" />
+		<meta property="og:title" content="Genshin Primo Tracker"/>
+		<meta property="og:description" content="A Website that helps you track your primogems."/>
+		<meta name="description" content="A Website that helps you track your primogems."/>
+		<meta property="og:image" content="%sveltekit.assets%/logo512.png"/>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
