--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,15 @@
 		<meta property="og:description" content="A Website that helps you track your primogems."/>
 		<meta name="description" content="A Website that helps you track your primogems."/>
 		<meta property="og:image" content="%sveltekit.assets%/logo512.png"/>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-15YRKLR4CF"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-15YRKLR4CF');
+		</script>
 
 		%sveltekit.head%
 	</head>
