--- a/src/app.html
+++ b/src/app.html
@@ -7,8 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#080c14" />
 		<meta property="og:title" content="Genshin Primo Tracker"/>
-		<meta property="og:description" content="A Website that helps you track your primogems."/>
-		<meta name="description" content="A Website that helps you track your primogems."/>
+		<meta property="og:description" content="A website that helps you track your primogems."/>
+		<meta name="description" content="A weSbsite that helps you track your primogems."/>
 		<meta property="og:image" content="%sveltekit.assets%/logo512.png"/>
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-15YRKLR4CF"></script>
