--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		<meta property="og:title" content="Genshin Primo Tracker"/>
 		<meta property="og:description" content="A website that helps you track your primogems."/>
 		<meta name="description" content="A website that helps you track your primogems."/>
-		<meta property="og:image" content="%sveltekit.assets%/logo512.png"/>
+		<meta property="og:image" content="https://sirderpyherp.github.io/genshin-primo/logo512.png"/>
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-15YRKLR4CF"></script>
 		<script>
