Update title metadata

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
     	<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-32x32.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#080c14" />
-		<meta property="og:title" content="Genshin Primo Tracker"/>
+		<meta property="og:title" content="Genshin Primo Planner"/>
 		<meta property="og:description" content="A website that helps you track your primogems."/>
 		<meta name="description" content="A website that helps you track your primogems."/>
 		<meta property="og:image" content="https://sirderpyherp.github.io/genshin-primo/logo512.png"/>
